fixed solution view alignment

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -98,6 +98,9 @@ html {
         .random-solution-selection {
             text-align: center;
         }
+        .solution-details {
+            text-align: left;
+        }
     }
     
     .tests {
